# Convert-to-CoreML

./: README.md  pyproject.toml  requirements.txt
Convert _to_CoreML/src/Convert_to_CoreML.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Convert-to-CoreML-main/: LICENSE  README.md  pyproject.toml
Convert-to-CoreML-main/convert_to_coreml/src/convert_to_coreml/: convert.py
convert_to_coreml/: pyproject.toml
convert_to_coreml/src/convert_to_coreml/: __init__.py  convert.py
